# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml
day01/: d1.py  test_d1.py
helpers/: helper.py
